--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "angular-bootstrap": "^0.12.2",
+    "bootstrap": "^5.1.3",
     "ng-zorro-antd": "^13.0.1",
+    "ngx-bootstrap": "^8.0.0",
     "ngx-perfect-scrollbar": "^10.1.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
