--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~13.2.0",
     "angular-bootstrap": "^0.12.2",
     "bootstrap": "^5.1.3",
+    "jquery": "^3.6.0",
     "ng-zorro-antd": "^13.0.1",
     "ngx-bootstrap": "^8.0.0",
     "ngx-perfect-scrollbar": "^10.1.1",
